--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -13,7 +13,7 @@ import SmallProject from "./SmallProject.astro";
       data.map((projectsGroup, projectGroupIndex) => {
         if (projectsGroup.group_project_display === "large") {
           return (
-            <div class="relative isolate px-5 lg:px-0">
+            <div class="overflow-hidden relative isolate px-5 lg:px-0 lg:pt-[207px] lg:-mt-[207px]">
               {projectGroupIndex === 0 && (
                 <Brush
                   id="4"
@@ -23,7 +23,7 @@ import SmallProject from "./SmallProject.astro";
                     "absolute",
                     "z-[-1]",
                     "right-[-20px]",
-                    "top-[-207px]",
+                    "top-0",
                     "w-[490px]",
                     "h-[487px]",
                   ]}
