itsamatch certifications responsive

--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -28,15 +28,17 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
           {data.content}
         </p>
 
-        <div class="col-span-full lg:col-start-2 lg:col-span-10">
-          <CallToAction
-            type="secondary"
-            rightIcon="open_in_new"
-            class="mx-auto mb-20"
-          >
-            Page LinkedIn de Team UX
-          </CallToAction>
+        <CallToAction
+          type="secondary"
+          rightIcon="open_in_new"
+          class="col-span-full mx-auto mb-20"
+        >
+          Page LinkedIn de Team UX
+        </CallToAction>
 
+        <div
+          class="col-span-full sm:col-start-2 sm:col-span-4 lg:col-span-full xl:col-start-2 xl:col-span-10"
+        >
           <div class="px-5 py-6 lg:p-10 bg-surface5 rounded-[26px]">
             <h3 class="mb-10 text-headline-medium-bold">
               Voici comment nous travaillons
