plan du site: fix mt contact

--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -16,7 +16,7 @@ import Layout from "../../layouts/Layout.astro";
     <Hero />
   </div>
 
-  <div class="mb-[200px] lg:mb-20">
+  <div class="mb-[200px]">
     <Content />
   </div>
 
