fix header useless padding

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -8,7 +8,7 @@ import Grid from "../@common/Grid.astro";
 ---
 
 <header id="header" data-menu-opened="false" class="sticky z-10 top-0">
-  <div class="outer isolate py-5 lg:px-10 lg:py-0">
+  <div class="outer isolate py-5 lg:py-0">
     <div class="container">
       <Grid>
         <div
