use responsive wrapper

--- a/src/components/@common/Grid.astro
+++ b/src/components/@common/Grid.astro
@@ -18,6 +18,7 @@ const { as: HTMLTag = "div", class: cssClasses, ...props } = Astro.props;
     "grid-cols-6",
     "lg:gap-x-8",
     "lg:grid-cols-12",
+    "responsive-wrapper",
     cssClasses,
   ]}
   {...props}
