--- a/src/components/pages/temoignages/Testimonials.astro
+++ b/src/components/pages/temoignages/Testimonials.astro
@@ -4,7 +4,7 @@ import Testimonial from "../../Testimonial.astro";
 ---
 
 <section class="container mb-[200px] lg:mb-0">
-  <ul class="px-5 lg:px-0 lg:columns-3 lg:gap-8 space-y-5">
+  <ul class="responsive-wrapper md:columns-2 xl:columns-3 xl:gap-8 space-y-5">
     {
       data.map((testimonial) => {
         return (
