--- a/src/components/pages/glossaire-ux-design/Hero.astro
+++ b/src/components/pages/glossaire-ux-design/Hero.astro
@@ -5,7 +5,7 @@ import CommonPageHero from "../../CommonPageHero.astro";
 <div>
   <CommonPageHero
     title="Glossaire de l’UX design"
-    subtitle="Vous arrivez dans le monde du design UX et vous trouvez que son vocabulaire est dense ?<br>Pas de panique, nous avons rédigé ce glossaire de l’UX design afin de clarifier certains termes, que nous utilisons parfois sur notre site, dans notre book ou dans le contenu de nos devis pour parler d’un outil, d’un livrable, ou d’une méthode de travail."
+    subtitle="Vous trouvez que son vocabulaire est dense ?<br>Pas de panique, nous avons rédigé ce glossaire de l’UX design pour clarifier certains termes, que nous utilisons parfois pour parler d’un outil, d’un livrable, ou d’une méthode de travail."
     showBackgroundForm={false}
   />
 </div>
