--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -14,6 +14,7 @@ const urlPageTitles = new Map([
   ["mentions-legales", "Mentions légales"],
   ["plan-du-site", "Plan du site"],
   ["glossaire-ux-design", "Glossaire de l’UX design"],
+  ["demarche-eco-conception", "Démarche d'éco-conception"],
 ]);
 ---
 
