--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,8 +7,10 @@ import Breadcrumb from "../components/Breadcrumb.astro";
 ---
 
 <Layout
-  title="Team UX ▷ Page non trouvée"
-  description="Nous sommes Yuna & Daniela, un binôme de designers UX seniors. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
+  title="Team UX - Page non trouvée"
+  description="Page non trouvée"
+  og_title="Team UX - Page non trouvée"
+  og_description="Page non trouvée"
 >
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
