--- a/src/pages/demarche-eco-conception/index.astro
+++ b/src/pages/demarche-eco-conception/index.astro
@@ -7,7 +7,12 @@ import Hero from "../../components/pages/demarche-eco-conception/Hero.astro";
 import Footer from "../../components/Footer.astro";
 ---
 
-<Layout title="Démarche d'éco-conception">
+<Layout
+  title="Team UX - Démarche d’éco-conception"
+  description="Ce site est éco-conçu. Découvrez les détails de notre démarche d’éco-conception dans cette déclaration."
+  og_title="Team UX - Démarche d’éco-conception"
+  og_description="Ce site est éco-conçu. Découvrez les détails de notre démarche d’éco-conception dans cette déclaration."
+>
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
