--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -11,6 +11,8 @@ import ScrollToTop from "../../components/ScrollToTop/index.astro";
 <Layout
   title="Team UX - Glossaire de l’UX design"
   description="Nous avons défini de nombreux termes techniques utilisés dans le domaine du design UX pour parler d’outils de design, de livrables UX ou de méthodes de travail."
+  og_title="Le glossaire de l’UX design 🤓 vu par Team UX"
+  og_description="Le vocabulaire de l’UX design décrypté... Clarifions des termes que nous utilisons sur notre site ou dans nos devis pour parler d’un outil de design, d’un livrable UX ou d’une méthode de travail !"
 >
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
