--- a/src/pages/mentions-legales/index.astro
+++ b/src/pages/mentions-legales/index.astro
@@ -10,6 +10,8 @@ import Content from "../../components/pages/mentions-legales/Content.astro";
 <Layout
   title="Team UX - Mentions légales"
   description="Page des mentions légales du site team-ux.com."
+  og_title="Team UX - Mentions légales"
+  og_description="Page des mentions légales du site team-ux.com."
 >
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
