--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -13,6 +13,8 @@ import Signatures from "../../components/pages/notre-manifeste/Signatures.astro"
 <Layout
   title="Team UX - Notre manifeste"
   description="Découvrez les convictions qui guident nos choix de conception UX et nos actions au quotidien."
+  og_title="Team UX - Notre manifeste 👊"
+  og_description="Découvrez les convictions qui guident nos choix de conception UX et nos actions au quotidien."
 >
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
