--- a/src/pages/plan-du-site/index.astro
+++ b/src/pages/plan-du-site/index.astro
@@ -7,7 +7,12 @@ import Hero from "../../components/pages/plan-du-site/Hero.astro";
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Team UX - Plan du site" description="Plan du site team-ux.com.">
+<Layout
+  title="Team UX - Plan du site"
+  description="Plan du site team-ux.com."
+  og_title="Team UX - Plan du site"
+  og_description="Plan du site team-ux.com."
+>
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
   </div>
