--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,9 +8,11 @@ import Toast from "../components/Toast.astro";
 interface Props {
   title: string;
   description: string;
+  og_description: string;
+  og_title: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, og_description, og_title } = Astro.props;
 ---
 
 <!doctype html>
@@ -20,15 +22,21 @@ const { title, description } = Astro.props;
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="sitemap" href="/sitemap-index.xml" />
+    <meta name="msapplication-TileColor" content="#08124f" />
+    <meta name="theme-color" content="#08124f" />
+    <meta property="og:title" content={og_title} />
+    <meta property="og:site_name" content="Team UX" />
+    <meta property="og:url" content={Astro.site} />
+    <meta property="og:description" content={og_description} />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content={`${Astro.site}images/sn_share.png`} />
+    <link rel="sitemap" href={`${Astro.site}sitemap-index.xml`} />
     <link rel="stylesheet" href="/css/print.css" media="print" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
     <title>{title}</title>
   </head>
   <body>
