--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,8 @@ import Footer from "../components/Footer.astro";
 <Layout
   title="Team UX ▷ 2 designers UX en freelance à Bordeaux"
   decription="Nous sommes Yuna & Daniela, l'extension UX de votre équipe produit. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
+  og_title="Découvrez Team UX 👋🏻 👋🏼  Design UX en freelance"
+  og_description="On est Yuna & Daniela, un binôme de designers UX seniors. On adore (dé)construire des produits complexes. ✓ UX/UI design ✓ Éco-conception ✓ Accessibilité Web"
 >
   <div class="mt-[60px] lg:mt-[129px] mb-[150px] lg:mb-[85px]">
     <Hero />
