--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -11,6 +11,8 @@ import ScrollToTop from "../../components/ScrollToTop/index.astro";
 <Layout
   title="Team UX - Nos projets UX design"
   description="Découvrez une sélection de nos collaborations UX. Quelques références de projets de design UX, de conception accessible et d’éco-conception."
+  og_title="Projets de Team UX 👋🏻 👋🏼 Design UX en freelance"
+  og_description="Découvrez quelques unes de nos références en design UX, conception accessible et éco-conception. Tout ce qu’on aime !"
 >
   <div class="hidden md:block mb-[90px]">
     <Breadcrumb />
