--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -60,8 +60,12 @@ import Block from "./Block.astro";
     & :global(ul) {
       & :global(ul) {
         list-style-type: "- ";
-        margin-left: 20px;
+        margin-left: 30px;
       }
+    }
+
+    :global(a) {
+      @apply text-primary underline underline-offset-[4px];
     }
   }
 </style>
