--- a/src/components/pages/demarche-eco-conception/Hero.astro
+++ b/src/components/pages/demarche-eco-conception/Hero.astro
@@ -5,7 +5,7 @@ import CommonPageHero from "../../CommonPageHero.astro";
 <div>
   <CommonPageHero
     title="Démarche d’éco-conception"
-    subtitle="Ce site est éco-conçu. Cette page décrit la démarche d’éco-conception que nous suivons.<br>Dernière mise à jour : <time datetime='2023-10-10'>10 octobre 2023</time>."
+    subtitle="<span class='block lg:text-body-medium'>Ce site est éco-conçu. Cette page décrit la démarche d’éco-conception que nous suivons.<br>Dernière mise à jour : <time datetime='2023-10-10'>10 octobre 2023</time>.</span>"
     showBackgroundForm={false}
   />
 </div>
