--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -7,6 +7,115 @@ import Block from "./Block.astro";
 
 <div class="demarche-eco-conception container">
   <Grid>
+    <h2 class="col-span-full lg:col-start-2 mb-10 text-headline-large">
+      Mesures sur ce site <span class="text-headline-small"
+        >&bull; en date du 10 octobre 2023</span
+      >
+    </h2>
+
+    <div class="col-span-full md:col-span-2 lg:col-start-2 lg:col-span-3">
+      <div class="bg-surface5 p-8 rounded-[26px]">
+        <h3 class="text-label-large mb-5">Score EcoIndex moyen d’une page</h3>
+        <p class="text-headline-medium-bold mb-8">B (78,8/100)</p>
+        <p class="text-label-medium">
+          La meilleure note possible est A <br />
+           Le meilleur score possible est 100
+        </p>
+      </div>
+    </div>
+
+    <div class="col-span-full md:col-span-2 lg:col-span-3">
+      <div class="bg-surface5 p-8 rounded-[26px]">
+        <h3 class="text-label-large mb-5">Score EcoGrader moyen d’une page</h3>
+        <p class="text-headline-medium-bold mb-8">99/100</p>
+        <p class="text-label-medium">
+          Un meilleur score que 95% de toutes URLs testées par Ecograder
+        </p>
+      </div>
+    </div>
+
+    <div class="col-span-full md:col-span-2 lg:col-span-3">
+      <div class="bg-surface5 p-8 rounded-[26px]">
+        <h3 class="text-label-large mb-5">Poids moyen d’une page</h3>
+        <p class="text-headline-medium-bold mb-8">138 ko</p>
+        <p class="text-label-medium">
+          Un poids 94% inférieur au poids médian d’une page Web desktop selon
+          HTTPArchive
+        </p>
+      </div>
+    </div>
+
+    <div
+      class="overflow-x-auto col-span-full lg:col-start-2 lg:col-span-9 my-20 lg:mb-[120px]"
+    >
+      <table class="w-full border-collapse border border-neutral2">
+        <thead class="bg-neutral4">
+          <tr>
+            <th class="w-[310px] whitespace-nowrap">Page</th>
+            <th class="w-[193px] whitespace-nowrap">Poids</th>
+            <th class="w-[274px] whitespace-nowrap">Scores EcoIndex</th>
+            <th class="w-[274px] whitespace-nowrap">Scores EcoGrader</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Accueil</td>
+            <td>196 ko</td>
+            <td>B (77/100)</td>
+            <td>98/100</td>
+          </tr>
+          <tr>
+            <td>Projets</td>
+            <td>151 ko</td>
+            <td>C (64/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Témoignages</td>
+            <td>108 ko</td>
+            <td>A (85/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Nos 2 profils</td>
+            <td>158 ko</td>
+            <td>A (82/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Notre manifeste</td>
+            <td>181 ko</td>
+            <td>A (84/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Mentions légales</td>
+            <td>109 ko</td>
+            <td>A (86/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Plan du site</td>
+            <td>106 ko</td>
+            <td>A (87/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Glossaire UX design</td>
+            <td>124 ko</td>
+            <td>C (59/100)</td>
+            <td>99/100</td>
+          </tr>
+          <tr>
+            <td>Démarche d’éco-conception</td>
+            <td>109 ko</td>
+            <td>A (85/100)</td>
+            <td>99/100</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
     <div
       class="col-span-full lg:col-start-2 lg:col-span-10 space-y-[60px] lg:space-y-[140px]"
     >
@@ -66,6 +175,18 @@ import Block from "./Block.astro";
 
     :global(a) {
       @apply text-primary underline underline-offset-[4px];
+    }
+  }
+
+  table {
+    th,
+    td {
+      @apply p-2.5 text-left;
+    }
+
+    thead,
+    td {
+      @apply border-b border-neutral2;
     }
   }
 </style>
