--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
   .responsive-wrapper {
-    @apply px-5 md:px-8 lg:px-[50px];
+    @apply px-5 md:px-8 lg:px-[50px] 2xl:px-0;
   }
 
   .text-display-large {
