--- a/src/components/pages/homepage/Testimonials/index.astro
+++ b/src/components/pages/homepage/Testimonials/index.astro
@@ -8,7 +8,7 @@ import Testimonial from "../../../Testimonial.astro";
 <section class="container">
   <Grid>
     <h2
-      class="col-span-full text-headline-small lg:text-headline-medium text-neutral1 mb-6 lg:mb-10"
+      class="col-span-full lg:text-headline-medium text-neutral1 mb-6 lg:mb-10 text-headline-small"
     >
       {data.title}
     </h2>
