--- a/src/components/CommonPageHero.astro
+++ b/src/components/CommonPageHero.astro
@@ -49,3 +49,21 @@ const backgroundFormCSSClasses = showBackgroundForm
     </Grid>
   </div>
 </section>
+
+<style>
+  @screen lg {
+    h1 {
+      font-size: 52px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 65px;
+    }
+
+    h2 {
+      font-size: 22px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 36px;
+    }
+  }
+</style>
