--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -31,7 +31,7 @@ const backgroundFormCSSClasses = showBackgroundForm
 >
   <div id="contact" class="container">
     <Grid>
-      <div class="col-span-full lg:col-start-2 lg:col-span-8">
+      <div class="col-span-full lg:col-span-11 2xl:col-start-2 2xl:col-span-8">
         <div
           class="relative px-5 pb-10 pt-9 lg:p-14 bg-surface3 rounded-[26px]"
         >
