--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -25,27 +25,37 @@ const {
       </h2>
     </Grid>
     <Grid as="ul" class="gap-y-2.5 lg:gap-y-5 mb-10 lg:mb-[60px]">
-      <li class="col-span-full lg:col-start-2 lg:col-span-7 isolate relative">
+      <li
+        class="col-span-full lg:col-start-1 2xl:col-start-2 lg:col-span-10 2xl:col-span-7 isolate relative"
+      >
         <Brush
           id="3"
           class="hidden lg:block absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
         />
         <Teasing content={teasing1} />
       </li>
-      <li class="col-span-full lg:col-start-4 lg:col-span-4">
+      <li
+        class="col-span-full lg:col-start-2 lg:col-span-5 2xl:col-start-4 2xl:col-span-4"
+      >
         <Teasing content={teasing2} />
       </li>
-      <li class="col-span-full lg:col-start-8 lg:col-span-4 isolate relative">
+      <li
+        class="col-span-full lg:col-start-7 lg:col-span-5 2xl:col-start-8 2xl:col-span-4 isolate relative"
+      >
         <Brush
           id="3"
-          class="hidden lg:block absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
+          class="hidden 2xl:block absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
         />
         <Teasing content={teasing3} />
       </li>
-      <li class="col-span-full lg:col-start-2 lg:col-span-5">
+      <li
+        class="col-span-full lg:col-start-1 lg:col-span-7 2xl:col-start-2 2xl:col-span-5"
+      >
         <Teasing content={teasing4} />
       </li>
-      <li class="col-span-full lg:col-start-7 lg:col-span-4">
+      <li
+        class="col-span-full lg:col-start-8 lg:col-span-5 2xl:col-start-7 2xl:col-span-4"
+      >
         <Teasing content={teasing5} />
       </li>
     </Grid>
