homepage hero img log

--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -31,7 +31,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
         </CallToAction>
       </div>
       <div class="max-lg:hidden col-start-9 col-span-3">
-        <div class="relative lg:mt-[250px] 2xl:mt-[67px]">
+        <div class="relative lg:-mx-5 lg:mt-[250px] 2xl:mx-0 2xl:mt-[67px]">
           <BackgroundForm1
             class="max-lg:hidden absolute top-[-184px] right-[-580px] z-[-1]"
           />
