homepage expertise sm bg form

--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -16,7 +16,7 @@ import Expertise from "./Expertise.astro";
 
         <BackgroundForm1
           as="span"
-          class="lg:hidden absolute z-[-1] top-[-255px] left-[135px]"
+          class="lg:hidden absolute z-[-1] top-[-255px] left-[135px] sm:top-[-100px] sm:left-[435px]"
         />
       </h2>
 
