--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -5,7 +5,9 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
 import DuoDeChoc from "../../DuoDeChoc.astro";
 ---
 
-<section class="overflow-hidden lg:mb-[-165px] lg:pb-[165px]">
+<section
+  class="overflow-hidden lg:mb-[-80px] lg:pb-[80px] 2xl:mb-[-165px] 2xl:pb-[165px]"
+>
   <div class="container">
     <Grid>
       <h1
@@ -31,9 +33,11 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
         </CallToAction>
       </div>
       <div class="max-lg:hidden col-start-9 col-span-3">
-        <div class="relative lg:-mx-5 lg:mt-[250px] 2xl:mx-0 2xl:mt-[67px]">
+        <div
+          class="relative lg:-mx-5 lg:mt-[190px] xl:mt-[160px] 2xl:mx-0 2xl:mt-[67px]"
+        >
           <BackgroundForm1
-            class="max-lg:hidden absolute top-[-184px] right-[-580px] z-[-1]"
+            class="max-lg:hidden absolute top-[-175px] right-[-440px] xl:top-[-90px] xl:right-[-310px] 2xl:top-[-184px] 2xl:right-[-580px] z-[-1]"
           />
 
           <DuoDeChoc variant="big" />
