--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -121,7 +121,7 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                 <div data-letter-section={letter} class="letter-section">
                   <p
                     id={`letter-${letter}`}
-                    class="mb-6 block text-headline-extra-large sm:text-headline-large uppercase lg:scroll-mt-[190px]"
+                    class="mb-6 block text-headline-extra-large sm:text-headline-large uppercase scroll-mt-[270px] 2xl:scroll-mt-[190px]"
                   >
                     {letter}
                   </p>
