--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -37,7 +37,7 @@ const backgroundFormCSSClasses = showBackgroundForm
         >
           {
             showBackgroundForm && (
-              <BackgroundForm1 class="hidden lg:block absolute z-[-1] top-[-205px] right-[-860px]" />
+              <BackgroundForm1 class="hidden lg:block absolute z-[-1] lg:top-[-25px] lg:right-[-540px] 2xl:top-[-205px] 2xl:right-[-860px]" />
             )
           }
 
