--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -14,14 +14,14 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
         <div class="isolate relative">
           <Brush
             id="1"
-            class="absolute z-[-1] left-0 lg:left-auto lg:right-[-202px] top-[calc(100%-60px)] lg:top-[-22px] w-[214px] h-[254px] lg:w-[321px] lg:h-[381px]"
+            class="absolute z-[-1] left-1/2 max-lg:translate-x-[calc(-50%-60px)] lg:left-auto lg:right-[-202px] top-[calc(100%-60px)] lg:top-[-22px] w-[214px] h-[254px] lg:w-[321px] lg:h-[381px]"
           />
           <Brush
             id="4"
-            class="absolute z-[-2] right-0 lg:right-[-361px] top-[calc(100%-60px)] lg:top-[-22px] lg:w-[383px] lg:h-[381px] w-[255px] h-[254px]"
+            class="absolute z-[-2] right-1/2 max-lg:translate-x-[calc(-50%+280px)] lg:right-[-361px] top-[calc(100%-60px)] lg:top-[-22px] lg:w-[383px] lg:h-[381px] w-[255px] h-[254px]"
           />
           <BackgroundForm1
-            class="absolute z-[-3] right-[-395px] bottom-[-251px] lg:right-[-1060px] lg:bottom-[-160px]"
+            class="absolute z-[-3] right-1/2 max-lg:translate-x-[calc(-50%+200px)] max-lg:translate-y-[calc(-50%+510px)] lg:right-[-770px] lg:bottom-[20px] 2xl:right-[-1060px] 2xl:bottom-[-160px]"
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
