y spacing on mobile

--- a/src/components/pages/demarche-eco-conception/Content.astro
+++ b/src/components/pages/demarche-eco-conception/Content.astro
@@ -13,7 +13,9 @@ import Block from "./Block.astro";
       >
     </h2>
 
-    <div class="col-span-full md:col-span-2 lg:col-start-2 lg:col-span-3">
+    <div
+      class="col-span-full md:col-span-2 lg:col-start-2 lg:col-span-3 mb-5 md:mb-0"
+    >
       <div class="bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Score EcoIndex moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">B (78,8/100)</p>
@@ -24,7 +26,7 @@ import Block from "./Block.astro";
       </div>
     </div>
 
-    <div class="col-span-full md:col-span-2 lg:col-span-3">
+    <div class="col-span-full md:col-span-2 lg:col-span-3 mb-5 md:mb-0">
       <div class="bg-surface5 p-8 rounded-[26px]">
         <h3 class="text-label-large mb-5">Score EcoGrader moyen d’une page</h3>
         <p class="text-headline-medium-bold mb-8">99/100</p>
