derrire team ux title mt

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -17,7 +17,7 @@ const { block1, block2 } = data;
     <div class="container">
       <Grid>
         <h2
-          class="col-span-full mt-[60px] lg:mt-0 mb-8 lg:mb-20 text-headline-extra-large lg:text-display-small lg:text-center"
+          class="col-span-full mt-[60px] 2xl:mt-0 mb-8 lg:mb-20 text-headline-extra-large lg:text-display-small lg:text-center"
         >
           {data.title}
         </h2>
