--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -21,7 +21,7 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
             class="absolute z-[-2] right-1/2 max-lg:translate-x-[calc(-50%+280px)] lg:right-[-361px] top-[calc(100%-60px)] lg:top-[-22px] lg:w-[383px] lg:h-[381px] w-[255px] h-[254px]"
           />
           <BackgroundForm1
-            class="absolute z-[-3] right-1/2 max-lg:translate-x-[calc(-50%+200px)] max-lg:translate-y-[calc(-50%+510px)] lg:right-[-770px] lg:bottom-[20px] 2xl:right-[-1060px] 2xl:bottom-[-160px]"
+            class="absolute z-[-3] right-1/2 max-lg:translate-x-[calc(-50%+880px)] max-lg:-bottom-[200px] lg:right-[-770px] lg:-bottom-[100px] 2xl:right-[-1060px] 2xl:bottom-[-160px]"
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
